# recon-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py
config/: scope.example.json  scope.json
docs/: security-design.md
recon/: __init__.py  audit.py  campaigns.py  contracts.py  differential.py  endpoint_scoring.py  evidence_graph.py  findings.py  h1_scope.py  http_fetch.py  imports.py  integrity.py  js_analysis.py  memory.py  notes.py  passive.py  planner.py  redaction.py  reports.py  safeio.py  scope.py  sensitive.py  sourcemaps.py  urls.py  workflow.py
recon_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: local_smoke_test.py
tests/: conftest.py  test_audit.py  test_campaigns.py  test_endpoint_scoring.py  test_findings.py  test_h1_scope.py  test_http_safety.py  test_js_analysis.py  test_memory.py  test_new_features.py  test_notes.py  test_planner.py  test_reports.py  test_scope.py  test_scope_config.py  test_sourcemaps.py  test_urls.py  test_workflow.py
